# Labs

./: .gitignore  LICENSE  README.md  lab1-1.html  lab1-2.html  lab1-3.html  lab1-4.html
CompArch/: Makefile  Makefile.win  SimpleComputer.dev  cuda.ods  main  main.c  sc.c  sc.h
CompArch/Graphen/: ALUCU.c  Makefile  Makefile~1  SimpleComputer.c  SimpleComputer.h  main  main2  main2.c  myBigChars.h  myReadKey.h  myTerm.c  sc.c
CompArch/Lab2/: Makefile.win  main  main.c  sc.c  sc.h
CompArch/Lab3/: Makefile  Makefile~2  main  main.c  main2  main2.c  myTerm.c  myTerm.h  sc.c  sc.h  script  scriptStasVer
CompArch/Lab4/: main  main.c  main2.c  myBigChars.c  myBigChars.h  myTerm.c  myTerm.h  sc.h  script  script2
CompArch/Lab5/: Makefile0  main  myReadKey.c  myReadKey.h  test
CompArch/Lab6/: Makefile  hdchs.c  hdchs.h  main  main.c
CompArch/sem1/: Otchet.docx
CompArch/sem2/: Untitled Diagram.xml
Elteh/: Eltech1.docx
Elteh/lab3/: Eltech3.docx
Elteh/lab4/: Eltech4.docx  lab4-1screen.html  lab4-2screen.html  lab4-3screen.html  (+2 more)
IT/: Otchet.docx  lab1-1.html  lab1-4.html
Ruban/3_sem/Monstruos/CaresianSystemClass/: CMakeLists.txt  cartesiansystem.cpp  cartesiansystem.h  main.cpp
SAOD/: Hash.cpp  Hash1.cpp  Merge.cpp
lab 1-5/: d1.html  d2.html  d3.html  d4.html  d5.html  d6.html  d7.html  head.html  index.html  lab1-5.html  main.html
lab 1-6/: globe.html  img.html  lab 1-6.html  lineyka.html  main.html  notepad.html  notepadsec.html  pencils.html  tetrad'.html
lab 1-7/: blank.html
lab 2-1/: 2-1.html
lab 2-2/: 2-2.html
lab 2-3/: blank.html
(+1511 files in other folders)
